# github-trend-agent

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: PROGRESS.md  PROJECT_BRIEF.md
reports/: README.md
scripts/: check.py  check_secrets.py
src/github_trend_agent/: __init__.py  __main__.py  cleaner.py  cli.py  config.py  github_client.py  models.py  reporter.py  scorer.py
src/github_trend_agent/llm/: __init__.py  analysis.py  deepseek.py
tests/: test_cleaner.py  test_cli.py  test_config.py  test_deepseek_provider.py  test_github_client.py  test_llm_analysis.py  test_reporter.py  test_scorer.py
