[project]
name = "github-trend-agent"
version = "0.1.0"
description = "Discover, rank, and analyze trending GitHub projects."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = ["python-dotenv==1.2.2"]

[project.optional-dependencies]
dev = ["ruff==0.15.22"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
